# TLOdata_pipeline

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: checks.yml  pylint.yml  tests.yml
config/: mkdocs.yml  pipeline_setup.yaml
docs/: README.md
inputs/: README.md
inputs/demography/census/: README.md
inputs/demography/dhs/: README.md
inputs/demography/wpp/: README.md
outputs/: README.md
reporting/tlo_demography_pipeline/: artifacts.py  build_report.py
requirements/: base.txt  dev.txt
scripts/: build_all_demography.py  build_census_resources.py  build_dhs_resources.py  build_wpp_resources.py  demography_io.py
scripts/utils/: utils.py
src/pipeline/: cli.py  paths.py
src/pipeline/components/: dummy_resourcefile_builder.py  example_builder.py  example_formatting_builder.py  resource_builder.py  utils.py
src/pipeline/components/common/: fixes.py
src/pipeline/components/demography/: census.py  dhs.py  wpp.py
src/pipeline/components/framework/: builder.py  fixes.py  utils.py
src/pipeline/components/reporting/: build_report.py
src/scripts/build_demography_RF/: build_census_rf.py  build_dhs_rf.py  build_wpp_rf.py
src/scripts/build_demography_rf/: build_census_rf.py  build_dhs_rf.py  build_wpp_rf.py
src/tlo/: cli.py  paths.py
src/tlo/demography/: build_all.py  census.py  dhs.py  wpp.py
src/tlo/demography/reporting/: build_report.py
src/tlo/methods/demography/: census.py  dhs.py  wpp.py
src/tlo/methods/reporting/: build_report.py
src/tlo_data_pipeline/: cli.py  config.py  paths.py
src/tlo_data_pipeline/demography/: artifacts.py  build_all.py  census.py  checks.py  demography_io.py  dhs.py  fixes.py  utils.py  wpp.py
src/tlo_data_pipeline/demography/reporting/: build_report.py
tests/: test_census_builder.py  test_common_io.py  test_demography_checks.py  test_dhs_builder.py  test_fixes.py  test_resource_builder_base.py  test_utils.py  test_wpp_builder.py
